--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsc && node ./build/index.js",
     "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
     "build": "tsc",
-    "migrations": "tsnd ./src/data/migrations.ts",
+    "migrations": "tsnd ./src/data/migrations/migrations.ts",
     "nodem": "tsc && nodemon src/index.ts"
   },
   "keywords": [],
